<resources>
    <string name="app_name">Happy Bites Order</string>
    <string name="title_activity_maps">Happy Bites Order</string>
    <string name="title_activity_homed">homed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text1">Feeling hungry and bored!\nTry our Stir Fried Chinese Chicken at just 800ksh!\n
    Prepared with Brown rice, pepper, garlic, ginger, yellow pepper, beef, chicken breast, olive oil\n
    </string>
    <string name="text2">Get the Chinese Fried rice at 300KES lower\n
        promo valid till 3rd of August
    </string>
    <string name="text3">Get 3 burgers for the price of two\n
        with a 200ml soda and coleslaw
    </string>
    <string name="text4">Get 5 spicy wings for the price of one every Friday\n
        promo valid till 9pm
    </string>
    <string name="text5">Get two for the price of one every public holiday and \n
        first saturday of the month
    </string>
    <string name="text6">Get a full meal of chips, chicken, ginger sauce and\n
        a bottle of water every Sunday offer valid from 9am-12pm

    </string>
    <string name="contact">We are friendly and willing to chat. Reach out to us
        at anytime, we are happy to respond to you. Contact Us\n

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">home</string>
</resources>
