<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Happy Bites Combos"
        android:textSize="30dp"
        android:textColor="#000000"
        android:fontFamily="cursive"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtwelcome">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chicken"
                android:clickable="true"
                android:layout_margin="20dp"
                android:id="@+id/chicken"
                />
            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-15%"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cheeky Mondays"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:textColor="#000000"
                android:text="@string/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="3dip" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chinese"
                android:id="@+id/chinese"
                android:clickable="true"
                />
            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-300KES"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chinese Chicken"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:textColor="#000000"
                android:text="@string/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="9dip" />
            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/combo2"
                android:id="@+id/combo2"
                />
            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-8%"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wonder Wednesday"
                android:textSize="25dp"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/text2"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="9dip" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/combo3"
                android:id="@+id/combo3"
                android:clickable="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-5 Zinger Special%"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Buggy Thursdays"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/text3"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="9dip" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/wings"
                android:id="@+id/wings"
                android:clickable="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-600KES"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fun Friday"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/text4"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="9dip" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/burger1"
                android:id="@+id/burger1"
                android:clickable="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2 Pockett Banditos"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Public Holidays"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/text5"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="9dip" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/combo"
                android:clickable="true"
                android:id="@+id/combo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-10%"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="Crispy Sundays"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/text6"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
</LinearLayout>